first customer implementation with functional database

--- a/Comprei.Database/Comprei.Database.csproj
+++ b/Comprei.Database/Comprei.Database.csproj
@@ -9,11 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Repositories\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Comprei\Comprei.csproj" />
+    <ProjectReference Include="..\Comprei.Domain\Comprei.Domain.csproj" />
   </ItemGroup>
 
 </Project>
