--- a/Comprei/Comprei.csproj
+++ b/Comprei/Comprei.csproj
@@ -9,7 +9,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="View\" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Comprei.Database\Comprei.Database.csproj" />
   </ItemGroup>
 
 </Project>
