first house storage implemantation

--- a/Comprei.Domain/Comprei.Domain.csproj
+++ b/Comprei.Domain/Comprei.Domain.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Model\VOs\" />
+    <Folder Include="DTOs\" />
   </ItemGroup>
 
 </Project>
